<resources>
    <string name="app_name">Matrix_Ceramic</string>
    <string name="name">Название</string>
    <string name="type">Тип матрицы</string>
    <string name="part">Часть матрицы</string>
    <string name="weight">Вес</string>
    <string name="rack">Стеллаж</string>
    <string name="inventory2">Инв№</string>
    <string name="inventory">Инвентарный номер</string>
    <string name="add">Добавить</string>
    <string name="find">Найти</string>
    <string name="not_name">Введите название</string>
    <string name="not_type">Введите тип изделия</string>
    <string name="not_part">Введите часть</string>
    <string name="exist_matrix">Матрица существует</string>
    <string-array name="arr_type">
        <item>унитаз</item>
        <item>умывальник</item>
        <item>бачок 2ой</item>
        <item>бачок 3ой</item>
        <item>крышки 2ого бачка</item>
        <item>крышки 3ого бачка</item>
        <item>постамент</item>
        <item>писуар</item>
    </string-array>
    <string-array name="arr_washbowl">
        <item>папа</item>
        <item>мама</item>
    </string-array>
    <string-array name="arr_toilet">
        <item>правая боковушка</item>
        <item>левая боковушка</item>
        <item>крышка</item>
        <item>ножка</item>
        <item>спинка</item>
    </string-array>
</resources>
