<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.alex.matrix_ceramic.MainActivity"
        android:orientation="vertical">

    <EditText
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_name" tools:ignore="HardcodedText,LabelFor"/>
    <AutoCompleteTextView
            android:hint="@string/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/ac_type" tools:ignore="HardcodedText,LabelFor"/>
    <AutoCompleteTextView
            android:hint="@string/part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/ac_part" tools:ignore="HardcodedText,LabelFor"/>
    <EditText
            android:hint="@string/inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_inventory" tools:ignore="LabelFor"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:hint="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_weight" android:layout_weight="1" tools:ignore="LabelFor"/>
        <EditText
                android:hint="@string/rack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_rack" android:layout_weight="1" tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1" tools:ignore="InefficientWeight">
        <Button
                android:text="@string/add"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_add" android:layout_weight="1"
                tools:ignore="ButtonStyle,HardcodedText,NestedWeights,RtlHardcoded"/>
        <Button
                android:text="@string/find"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_find" android:layout_weight="1"
                tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"/>
    </LinearLayout>
</LinearLayout>
