<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_type_item" android:layout_weight="1"
                tools:ignore="HardcodedText" android:textAlignment="center"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_name_item" android:layout_weight="1"
                tools:ignore="HardcodedText" android:textAlignment="center"/>
    </LinearLayout>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tv_part_item" tools:ignore="HardcodedText"
            android:textAlignment="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/inventory2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_inv" android:layout_weight="0.2"
                android:textAlignment="center"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_inventory_item" android:layout_weight="1"
                tools:ignore="HardcodedText"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_weig" android:layout_weight="0.5"
                android:textAlignment="center"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_weight_item" android:layout_weight="1"
                tools:ignore="HardcodedText"/>
        <TextView
                android:text="@string/rack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_rac" android:layout_weight="0.7"
                android:textAlignment="center"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_rack_item" android:layout_weight="1"
                tools:ignore="HardcodedText"/>
    </LinearLayout>
</LinearLayout>